# mixbilibili

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  requirements.md  skills-lock.json
.deveco/plans/: 1781529306893-kind-comet.md  1781608896992-brave-panda.md
.github/workflows/: ci-check.yml  ci.yml
.serena/: project.yml
docs/plans/: 2026-04-27-user-experience-enhancements.md  2026-06-23-user-experience-enhancements.md
docs/superpowers/plans/: 2026-03-20-mixbilibili-impl.md  2026-03-22-comprehensive-optimization.md  2026-05-01-mixbilibili-v0.5.0-optimization-plan.md  2026-05-02-chinese-localization-plan.md  2026-05-02-progress-bar-redesign-plan.md
docs/superpowers/specs/: 2026-03-20-mixbilibili-design.md  2026-03-22-comprehensive-optimization-design.md  2026-05-01-mixbilibili-v0.5.0-optimization-design.md  2026-05-02-chinese-localization-design.md  2026-05-02-progress-bar-redesign.md
scripts/: aria2-hook.sh
src/: cli.rs  ffmpeg.rs  i18n.rs  main.rs  merger.rs  progress.rs  scanner.rs  state.rs
tests/: integration_test.rs
