[package]
name = "mixbilibili"
version = "0.3.0"
edition = "2021"
description = "A CLI tool for batch merging Bilibili video and audio files"
license = "MIT"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
which = "6.0.0"
rayon = "1.10.0"
colored = "2.1.0"
anyhow = "1.0.82"
indicatif = "0.17.8"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

[dev-dependencies]
tempfile = "3.10.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"